--- a/matchmaker.html
+++ b/matchmaker.html
@@ -2,7 +2,10 @@
 <html>
 <head>
   <title>Blog</title>
+  <link href="bootstrap.css" rel="stylesheet">
   <link href="css/style.css" rel="stylesheet">
+
+
 
 </head>
 <body>
@@ -31,28 +34,23 @@
   </div>
  </div>
  <div class="container">
-  <div id="profile">
-    <div class="box box1"><h2 class="title">Create a Profile</h2>
+  <div id="profile row">
+    <div class="box box1 col-sm-4"><h2 class="title">Create a Profile</h2>
     <p>Are you a Designer? <br/>Developer? Put yoursefl out there so that others can find you!</p>
     <button class="grey" id='firstButton'>SIGN UP NOW</button>
   </div>
 
   <div id="profile">
-    <div class="box box2"><h2 class="title">Find a developer</h2>
+    <div class="box box2 col-sm-4"><h2 class="title">Find a developer</h2>
     <p>Looking for a fantastic developer to work with on the next big thing? Look no further</p>
     <button class="grey">START YOUR SEARCH</button>
   </div>
 
   <div id="profile">
-    <div class="box box3"><h2 class="title">Find a Designer</h2>
+    <div class="box box3 col-sm-4"><h2 class="title">Find a Designer</h2>
     <p>Need someone who can make a product intuitive and appealing? Get ready.</p>
     <button class="grey">START YOUR SEARCH</button>
   </div>
 </div>
-
-
-  
-
-
-</body>
+</div>
 </html>
