--- a/matchmaker.html
+++ b/matchmaker.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>Blog</title>
-  <link href="bootstrap.css" rel="stylesheet">
+  <link href="css/bootstrap.css" rel="stylesheet">
   <link href="css/style.css" rel="stylesheet">
 
 
