--- a/matchmaker.html
+++ b/matchmaker.html
@@ -9,6 +9,7 @@
 
 </head>
 <body>
+  <div class="container">
   <header class="top">
     <h2 id="beg">Startup Matchmaker</h2>
     <ul id="nav">
@@ -20,6 +21,7 @@
     </ul>
   
  </header>
+</div>
 
  <div id="second">
   Because two brains <span id="taste">taste</span> <span id="are">are</span> better than one 
@@ -51,6 +53,7 @@
     <p>Need someone who can make a product intuitive and appealing? Get ready.</p>
     <button class="grey">START YOUR SEARCH</button>
   </div>
+</div>
 </div>
 </div>
 </html>
