add another wrapper

--- a/matchmaker.html
+++ b/matchmaker.html
@@ -22,7 +22,7 @@
   
  </header>
 </div>
-
+ <div class="container">
  <div id="second">
   Because two brains <span id="taste">taste</span> <span id="are">are</span> better than one 
  </div>
@@ -35,6 +35,7 @@
 
   </div>
  </div>
+</div>
  <div class="container">
   <div id="profile row">
     <div class="box box1 col-sm-4"><h2 class="title">Create a Profile</h2>
