add github links to frontont end samples

--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
             <h3>Forget Me Not</h3>
             <p>This app is designed to help you memorize things in a systematic way. The flow of cards is automated in line with your progress. As you study the cards, the stack is updated automatically according to the number of times each card has been studied</p>
             <p><a class="btn btn-default" href="http://warm-sierra-1277.herokuapp.com/">Forget Me Not &raquo;</a>&nbsp &nbsp<a href="https://github.com/SylvieC/Always_in_my_memory_app"><img src="images/g.png"></a></p>
+
         </div>
 
        
@@ -98,9 +99,11 @@
         <div class="row"><h2>FRONT-END PROJECTS SAMPLES<br/><br/>
             <div class="col-sm-6">
                 <div class="black"><a href="matchmaker.html"><img class='img-responsive' src="images/matchmaker.png"></a></div>
+                  </a>&nbsp &nbsp<a href="https://github.com/SylvieC/startup-matchmaker"><img src="images/g.png"></a>
             </div>
             <div class="col-lg-6">
                 <div class="black sample2"><a href="divided-times-nav/divided.html"><img class='img-responsive sample' src="images/divided2.png"></a></div>
+            </a>&nbsp &nbsp<a href="https://github.com/SylvieC/navbar_example"><img src="images/g.png"></a>
             </div>
            <!--  <div class="col-lg-2">
                 <div class="well">Column 3</div>
