--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     </div>
     <div class="row">
         <div class="col-sm-3">
-            <img class="img-circle img-responsive" src="images/app3.png">
+            <a href="http://getreadysavego.herokuapp.com/"><img class="img-circle img-responsive" src="images/app3.png"></a>
             <h3>Get Ready Save Go</h3>
             <p>Exciting app to organize, anticipate, save and track your next trip.  Your progress is displayed with a marker that will move from your starting point to your destination as your savings increase. A graph shows how much has been saved and when. You can also save some pictures, links and comments about the trip and plan at your own pace.  </p>
             <p><a class="btn btn-default" href="http://getreadysavego.herokuapp.com/">Get Ready Save Go &raquo;</a>&nbsp &nbsp<a href="https://github.com/SylvieC/ready_save_go"><img src="images/g.png" id="github3"></a></p>
@@ -69,8 +69,8 @@
 
 
            <div class="col-sm-3">
-            <img class="img-circle img-responsive" src="images/app4.png">
-            <h3>Game Starter - Avalon Game</h3> 
+           <a  href="http://gamekicker.herokuapp.com/"><img class="img-circle img-responsive" src="images/app4.png"></a>
+            <h3>Game Starter - Avalon Game</h3>
             <p>This app helps players set up the popular strategic board game Resistance Avalon. First, the user selects the number of players. Then, the number of characters needed from each side (good or evil) is displayed.  After the user has selected the characters played in the game, an audio file corresponding to the game set up is generated.  The players close their eyes and follow the directions given through the audio file </p>
             <p><em>This app is still in the process of being built, a few features are in the making</em></p>
             <p><a class="btn btn-default" href="http://gamekicker.herokuapp.com/">Game kicker &raquo;</a>&nbsp &nbsp
@@ -80,7 +80,7 @@
         <div class="clearfix hidden-md hidden-lg"></div>
 
         <div class="col-sm-3">
-            <img class="img-circle img-responsive img1" src="images/app1b.png">
+            <a  href="http://warm-sierra-1277.herokuapp.com/"><img class="img-circle img-responsive img1" src="images/app1b.png"></a>
             <h3>Forget Me Not</h3>
             <p>This app is designed to help you memorize things in a systematic way. The flow of cards is automated in line with your progress. As you study the cards, the stack is updated automatically according to the number of times each card has been studied</p>
             <p><a class="btn btn-default" href="http://warm-sierra-1277.herokuapp.com/">Forget Me Not &raquo;</a>&nbsp &nbsp<a href="https://github.com/SylvieC/Always_in_my_memory_app"><img src="images/g.png"></a></p>
@@ -88,7 +88,7 @@
         </div>
 
      <div class="col-sm-3">
-            <img class="img-circle img-responsive" src="images/idealme.png">
+            <a href="http://idealme.herokuapp.com/"><img class="img-circle img-responsive" src="images/idealme.png"></a>
             <h3>Ideal Me</h3> 
             <p>This app helps develop a balanced life according to your own criteria. You create an Ideal Chart by allocating a percentage of your time, every day, to each of the three categories: Social, Health, Intellect. You then create and track interests and events around those categories </p>
             <p>This was a group project with Isa Herico, Spencer Spenzzano and Eli Dawson.</p>
