change professional part

--- a/index.html
+++ b/index.html
@@ -185,7 +185,8 @@
             </div>
             <div class="col-md-9"><div class="well">
                 <h3>RESUME</h3><!-- <iframe src="https://docs.google.com/document/d/1skpXSnfqwR40_AGC4ySLEK5GBecY2iimxeRMsN6a1S4/pub?embedded=true"></iframe> -->
-           <iframe src="https://docs.google.com/document/d/1l0dWnhXnMvgGObtVKpbpfMz5sS59x0t03xWNjbFOYz4/pub?embedded=true"></iframe>
+          <!--  <iframe src="https://docs.google.com/document/d/1l0dWnhXnMvgGObtVKpbpfMz5sS59x0t03xWNjbFOYz4/pub?embedded=true"></iframe> -->
+          <iframe src="https://docs.google.com/document/d/1avvOlCV5GdZsR4BwikgLKbx6PiBe-FP-9OrZuO0myHE/pub?embedded=true"></iframe>
 
             </div>
         </div>  
@@ -211,7 +212,7 @@
                 <div class="tab-content">
                     <div class="tab-pane fade in active" id="android"><p><img src="images/worldmap.jpeg" alt="google" class="pull-right">I'm French but have lived all over the world. Having lived in 10 countries on four continents helps make me a valuable part of any team. I often think outside the box and bring new perspectives and new ideas to the table <br></span></p></div>
                     <div class="tab-pane fade in" id="bb"><p><img src="images/ruby.jpeg" alt="google" class="pull-right">I love programming. I just finished honing my skills through a 3 month Web Development Intensive Program at General Assembly, San Francisco<br></p></div>
-                    <div class="tab-pane fade in" id="ios"><p><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSeK1bJdxSssQjj4-lGapw2jjE0Sm1TlIHnkpwAtY0HVjZ1cjwxNQ" alt="teacher" class="pull-right teach">I have spent many years as a Math teacher and as a trainer/educator in Community Development Programs around the world. I am currently doing some freelance projects in web development and helping the startup called Spacebar. <br></p></div>
+                    <div class="tab-pane fade in" id="ios"><p><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSeK1bJdxSssQjj4-lGapw2jjE0Sm1TlIHnkpwAtY0HVjZ1cjwxNQ" alt="teacher" class="pull-right teach">Transitioned to Software Engineering after many years as a highschool Math teacher and as a trainer/educator in Community Development Programs around the world. I am currently working in a start-up in San Francisco as a Rails engineer<br></p></div>
                     <div class="tab-pane fade in" id="win"><p><img src="https://encrypted-tbn2.gstatic.com/images?q=tbn:ANd9GcSjpzhwWn8ubicALEOeUZbjAH88JahdqK-mGurCbLP16QuBKmq4Og" alt="learning is fun" class="pull-right team">I am passionate education and empowering others so they can succeed. I love how programming can help build meaningful tool to do just that<!--  and team work involve a constant opportunity to push established norms, learn and share new perspectives, and create exciting new applications<br>< --></p></div>
                    
                 </div>
@@ -277,8 +278,9 @@
             <li>Google Maps API</li>
             <li>Sinatra</li>
             <li>Twitter Bootstrap</li>
-            
             <li>Coffeescript</li>
+            <li>R</li>
+            <li>Slim</li>
 
         </ul>
       </div>
